--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/cors": "2.8",
+    "@types/express": "4.17",
     "@types/luxon": "^2.3.1",
+    "cors": "2.8",
+    "express": "4.17",
     "luxon": "^2.3.1",
     "pinia": "^2.0.17",
+    "ts-node": "^10.9.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
