--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "type-check-watch": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false --watch",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "server": "ts-node ./src/server/index.ts"
+    "server": "nodemon ./src/server/index.ts"
   },
   "dependencies": {
     "@types/cors": "2.8",
@@ -45,6 +45,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.0",
+    "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
