--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "server": "nodemon ./src/server/index.ts"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "2.8",
     "@types/express": "4.17",
+    "@types/express-session": "^1.17.5",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.184",
     "@types/luxon": "^2.3.1",
+    "cookie-parser": "^1.4.6",
     "cors": "2.8",
     "express": "4.17",
+    "express-session": "^1.17.3",
     "highlight.js": "^11.6.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
     "marked": "^4.0.18",
